- added forgot password page - fixed tooltip z-index - added page link on navigation

--- a/source/assets/stylesheets/components/_tooltip.sass
+++ b/source/assets/stylesheets/components/_tooltip.sass
@@ -6,13 +6,11 @@
   position: absolute
   display: none
   padding: 5px
-  border-width: 1px
-  border-style: solid
+  border: 1px solid #000
   background-color: #000
-  border-color: #000
   color: #fff
   +border-radius (5px)
-  z-index: 9002
+  z-index: 99999
 
 .tooltip-content
   font-size: 12px
@@ -24,9 +22,7 @@
   height: 0
   line-height: 0
   font-size: 0
-  border-style: solid
-  border-width: 6px
-  border-color: transparent
+  border: 6px solid transparent
 
 .tooltip-right .tooltip-arrow-outer
   left: 0
